@@ -16,7 +16,8 @@
   String_concat_fold
   Ignore
   Tuple_matching
-  Mutually_rec_types)
+  Mutually_rec_types
+  Nested_if)
  (preprocess
   (pps ppx_inline_test ppxlib.metaquot))
  (instrumentation
