@@ -1,0 +1,13 @@
+(library
+ (name test_nested_if)
+ (wrapped false)
+ (modules nested_if)
+ (flags
+  (:standard
+   ;-dsource
+   ;
+   ))
+)
+
+(cram
+ (deps %{bin:zanuda.exe}))
